--- a/Project3D/Project3D.vcxproj
+++ b/Project3D/Project3D.vcxproj
@@ -124,6 +124,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Character.cpp" />
+    <ClCompile Include="logic.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ModelObject.cpp" />
     <ClCompile Include="Player.cpp" />
@@ -131,6 +132,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Character.h" />
+    <ClInclude Include="logic.h" />
     <ClInclude Include="ModelObject.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="wiimote.h" />
