--- a/Project3D/Project3D.vcxproj.filters
+++ b/Project3D/Project3D.vcxproj.filters
@@ -19,6 +19,7 @@
     </ClCompile>
     <ClCompile Include="Objects\Collision\CollisionBox.cpp" />
     <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="SoundPlayer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Character.h" />
@@ -44,6 +45,7 @@
     </ClInclude>
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Objects\Collision\collisionbox.h" />
+    <ClInclude Include="SoundPlayer.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Controls">
