added flower model, updated CMakelist and added Node class files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,9 @@ set(SOURCE_FILES
 
         #models
         Project3D/Objects/ObjModel.cpp
+
+        #Node
+        Project3D/Objects/node/Node.cpp
         )
 
 add_executable(Menghindar_Diri ${SOURCE_FILES})
