--- a/Project3D/Project3D.vcxproj.filters
+++ b/Project3D/Project3D.vcxproj.filters
@@ -1,46 +1,61 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="Character.cpp" />
-    <ClCompile Include="Controls\GameController.cpp" />
-    <ClCompile Include="Controls\wiimote\wiimote.cpp" />
-    <ClCompile Include="Controls\wiimote\WiiMoteController.cpp" />
-    <ClCompile Include="enemy.cpp" />
-    <ClCompile Include="GameObject.cpp" />
-    <ClCompile Include="logic.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="ModelObject.cpp" />
+    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="logic.cpp" />
     <ClCompile Include="Model_OBJ.cpp" />
     <ClCompile Include="Object.cpp" />
+    <ClCompile Include="Controls\GameController.cpp">
+      <Filter>Controls</Filter>
+    </ClCompile>
+    <ClCompile Include="Controls\wiimote\WiiMoteController.cpp">
+      <Filter>Controls</Filter>
+    </ClCompile>
+    <ClCompile Include="Controls\wiimote\wiimote.cpp">
+      <Filter>Controls</Filter>
+    </ClCompile>
     <ClCompile Include="Objects\Collision\CollisionBox.cpp" />
-    <ClCompile Include="Objects\node\Node.cpp" />
-    <ClCompile Include="Objects\ObjModel.cpp" />
-    <ClCompile Include="Player.cpp" />
-    <ClCompile Include="Skybox.cpp" />
+    <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="SoundPlayer.cpp" />
-    <ClCompile Include="Menu.cpp" />
-    <ClCompile Include="Game.cpp" />
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="enemy.cpp" />
+    <ClCompile Include="Objects\ObjModel.cpp" />
+    <ClCompile Include="Objects\node\Node.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Character.h" />
-    <ClInclude Include="Controls\GameController.h" />
-    <ClInclude Include="Controls\wiimote\wiimote.h" />
-    <ClInclude Include="enemy.h" />
-    <ClInclude Include="GameObject.h" />
     <ClInclude Include="ModelObject.h" />
+    <ClInclude Include="Player.h" />
+    <ClInclude Include="logic.h" />
     <ClInclude Include="Model_OBJ.h" />
     <ClInclude Include="Object.h" />
+    <ClInclude Include="Controls\GameController.h">
+      <Filter>Controls</Filter>
+    </ClInclude>
+    <ClInclude Include="wiimote_state.h">
+      <Filter>Controls</Filter>
+    </ClInclude>
+    <ClInclude Include="wiimote_common.h">
+      <Filter>Controls</Filter>
+    </ClInclude>
+    <ClInclude Include="Controls\wiimote\wiimote.h">
+      <Filter>Controls</Filter>
+    </ClInclude>
+    <ClInclude Include="wiimote.h">
+      <Filter>Controls</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject.h" />
     <ClInclude Include="Objects\Collision\collisionbox.h" />
-    <ClInclude Include="Objects\node\Node.h" />
-    <ClInclude Include="Objects\objmodel.h" />
-    <ClInclude Include="Player.h" />
-    <ClInclude Include="Skybox.h" />
     <ClInclude Include="SoundPlayer.h" />
-    <ClInclude Include="wiimote.h" />
-    <ClInclude Include="wiimote_common.h" />
-    <ClInclude Include="wiimote_state.h" />
-    <ClInclude Include="Menu.h" />
-    <ClInclude Include="Game.h" />
-    <ClInclude Include="logic.h" />
+    <ClInclude Include="enemy.h" />
+    <ClInclude Include="Objects\objmodel.h" />
+    <ClInclude Include="Objects\node\Node.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="Controls">
+      <UniqueIdentifier>{7d4eff2b-c70c-471f-a529-0b8525ded126}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
 </Project>
