--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,12 @@
 *.exe
 *.out
 *.app
+Menghindar Diri.sdf
+Project3D/x64/Debug/Menghindar Diri.tlog/CL.command.1.tlog
+Project3D/x64/Debug/Menghindar Diri.tlog/CL.read.1.tlog
+Project3D/x64/Debug/Menghindar Diri.tlog/CL.write.1.tlog
+Project3D/x64/Debug/Menghindar Diri.tlog/Menghindar Diri.lastbuildstate
+Project3D/x64/Debug/Menghindar Diri.tlog/link.command.1.tlog
+Project3D/x64/Debug/Menghindar Diri.tlog/link.read.1.tlog
+Project3D/x64/Debug/Menghindar Diri.tlog/link.write.1.tlog
+Project3D/x64/Debug/vc140.idb
