--- a/Project3D/Project3D.vcxproj.filters
+++ b/Project3D/Project3D.vcxproj.filters
@@ -49,5 +49,6 @@
     <ClInclude Include="ShapeCalculator.h" />
     <ClInclude Include="StaticOpenGLFunctions.h" />
     <ClInclude Include="StaticSettings.h" />
+    <ClInclude Include="Controls\wiimote\WiiMoteController.h" />
   </ItemGroup>
 </Project>
